Added css to the website

--- a/recipes/eggs_benedict_breakfast_pizza.html
+++ b/recipes/eggs_benedict_breakfast_pizza.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eggs Benedict Breakfast Pizza</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Eggs Benedict Breakfast Pizza</h1>
-    <img src="../images/eggs_benedict_breakfast_pizza.jpg">
+    <h1 class="heading title">Eggs Benedict Breakfast Pizza</h1>
+    <img class="images" src="../images/eggs_benedict_breakfast_pizza.jpg">
 
-    <h2>Description</h2>
-    <p>Super easy-to-make pizza with all the great flavour of eggs Benedict.</p>
-    <p>Feeds a crowd.</p>
+    <h2 class="heading subtitle">Description</h2>
+    <p>Super easy-to-make pizza with all the great flavour of eggs Benedict.</br>Feeds a crowd.</p>
     
-    <h2>Ingredients</h2>
+    <h2 class="heading subtitle">Ingredients</h2>
     <ul>
         <li>1 tablespoon butter</li>
         <li>12 large eggs, well beaten</li>
@@ -25,7 +25,7 @@
         <li>1 cup shredded sharp Cheddar cheese</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="heading subtitle">Steps</h2>
     <ol>
         <li>Preheat the oven to 400 degrees F (200 degrees C).</li>
         <li>Melt butter in a nonstick skillet over medium heat.</br>Pour in beaten eggs; cook in hot butter to desired degree of doneness, stirring constantly. Remove from heat.</li>
