--- a/recipes/homemade_crispy_hash_browns.html
+++ b/recipes/homemade_crispy_hash_browns.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homemade Crispy Hash Browns</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Homemade Crispy Hash Browns</h1>
-    <img src="../images/homemade_crispy_hash_browns.jpg">
+    <h1 class="heading title">Homemade Crispy Hash Browns</h1>
+    <img class="images" src="../images/homemade_crispy_hash_browns.jpg">
 
-    <h2>Description</h2>
-    <p>Good, old-fashioned, restaurant-style hash browns.</p>
-    <p>Perfect with hot pepper sauce and ketchup!</p>
+    <h2 class="heading subtitle">Description</h2>
+    <p>Good, old-fashioned, restaurant-style hash browns.</br>Perfect with hot pepper sauce and ketchup!</p>
     
-    <h2>Ingredients</h2>
+    <h2 class="heading subtitle">Ingredients</h2>
     <ul>
         <li>2 medium russet potatoes, shredded</li>
         <li>½ medium onion, finely chopped</li>
@@ -23,7 +23,7 @@
         <li>salt and pepper to taste</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="heading subtitle">Steps</h2>
     <ol>
         <li>Gather all ingredients.</li>
         <li>Rinse shredded potatoes until water is clear, then drain and squeeze dry.</li>
