--- a/recipes/strawberry_pie.html
+++ b/recipes/strawberry_pie.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strawberry Pie</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Strawberry Pie</h1>
-    <img src="../images/strawberry_pie.jpg">
+    <h1 class="heading title">Strawberry Pie</h1>
+    <img class="images" src="../images/strawberry_pie.jpg">
 
-    <h2>Description</h2>
-    <p>This strawberry pie is my favourite pie, and it's very easy to make.</p>
-    <p>I got the recipe many years ago in North Jersey from the Sussex County Strawberry Farm.</p>
+    <h2 class="heading subtitle">Description</h2>
+    <p>This strawberry pie is my favourite pie, and it's very easy to make.</br>I got the recipe many years ago in North Jersey from the Sussex County Strawberry Farm.</p>
     
-    <h2>Ingredients</h2>
+    <h2 class="heading subtitle">Ingredients</h2>
     <ul>
         <li>1 quart fresh strawberries, hulled</li>
         <li>1 (9 inch) pie crust, baked</li>
@@ -23,7 +23,7 @@
         <li>½ cup heavy whipping cream</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="heading subtitle">Steps</h2>
     <ol>
         <li>Gather all ingredients.</li>
         <li>Arrange 1/2 of strawberries in baked pastry shell. Place remaining strawberries in a medium saucepan</li>
