--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project: Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="heading title">Odin Recipes</h1>
     <ul>
         <li><a href="recipes/strawberry_pie.html">Strawberry Pie</a></li>
         <li><a href="recipes/eggs_benedict_breakfast_pizza.html">Eggs Benedict Breakfast Pizza</a></li>
